<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_primary_color"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bt_back"
                        style="@style/ButtonBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back" />

                    <TextView
                        style="@style/TextTitleActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp20"
                        android:layout_marginEnd="@dimen/dp60"
                        android:layout_marginRight="@dimen/dp30"
                        android:layout_marginTop="@dimen/dp20"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/songs"
                        android:textAllCaps="false"
                        android:textStyle="italic" />
                </LinearLayout>

                <ListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_artists"
                style="@style/ButtonToActivity"
                android:layout_height="@dimen/dp50"
                android:gravity="center"
                android:text="@string/artists" />

            <Button
                android:id="@+id/bt_songs"
                style="@style/ButtonToActivity.Inactive"
                android:layout_height="@dimen/dp50"
                android:gravity="center"
                android:text="@string/songs" />

            <Button
                android:id="@+id/bt_nowPlaying"
                style="@style/ButtonToActivity"
                android:layout_height="@dimen/dp50"
                android:gravity="center"
                android:text="@string/now_playing" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>